update : on post discover